<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>de.ofterdinger.parents</groupId>
    <artifactId>build</artifactId>
    <version>0.1.6</version>
  </parent>

  <groupId>de.regatta-hd</groupId>
  <artifactId>regatta-hd</artifactId>
  <version>0.1.61</version>
  <packaging>pom</packaging>

  <name>Heidelberger Regatta Software</name>

  <organization>
    <name>Heidelberger Regattaverband e. V.</name>
    <url>http://www.regatta-hd.de/</url>
  </organization>

  <scm>
    <connection>scm:git:git@github.com:Heidelberger-Regattaverband/regatta-hd.git</connection>
    <developerConnection>scm:git:git@github.com:Heidelberger-Regattaverband/regatta-hd.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/Heidelberger-Regattaverband/regatta-hd</url>
  </scm>

  <repositories>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>

    <!-- https://search.maven.org/artifact/org.openjfx/javafx-base -->
    <openjfx.version>22.0.2</openjfx.version>

    <!-- https://search.maven.org/artifact/org.controlsfx/controlsfx -->
    <controlsfx.version>11.2.1</controlsfx.version>

    <!-- https://search.maven.org/artifact/org.projectlombok/lombok -->
    <lombok.version>1.18.34</lombok.version>

    <!-- https://search.maven.org/artifact/com.google.inject/guice -->
    <guice.version>7.0.0</guice.version>

    <!-- https://search.maven.org/artifact/org.hibernate.orm/hibernate-core -->
    <hibernate.version>6.5.2.Final</hibernate.version>

    <!-- https://search.maven.org/artifact/com.microsoft.sqlserver/mssql-jdbc -->
    <mssql.version>12.6.3.jre11</mssql.version>

    <!-- https://search.maven.org/artifact/org.apache.commons/commons-lang3 -->
    <commons-lang3.version>3.15.0</commons-lang3.version>

    <!-- https://search.maven.org/artifact/org.junit.jupiter/junit-jupiter-api -->
    <junit.version>5.10.3</junit.version>

    <!-- https://search.maven.org/artifact/org.liquibase/liquibase-core -->
    <liquibase.version>4.29.0</liquibase.version>

    <!-- https://search.maven.org/artifact/org.apache.poi/poi -->
    <poi.version>5.3.0</poi.version>

    <!-- https://search.maven.org/artifact/com.fazecast/jSerialComm -->
    <jSerialComm.version>2.11.0</jSerialComm.version>

    <!-- https://search.maven.org/artifact/com.sun.xml.bind/jaxb-impl -->
    <jaxb-impl.version>4.0.5</jaxb-impl.version>
  </properties>

  <modules>
    <module>commons-core</module>
    <module>commons-db</module>
    <module>commons-fx</module>
    <module>aquarius</module>
    <module>ui</module>
    <module>schemas</module>
    <module>releng/appassembler</module>
    <module>releng/mobile</module>
    <module>releng/nativeapp</module>
    <module>releng/webstart</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- ========== -->
      <!-- Regatta HD -->
      <!-- ========== -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>commons-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>commons-db</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>commons-fx</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>aquarius</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>schemas</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- ============== -->
      <!-- Database & JPA -->
      <!-- ============== -->
      <dependency>
        <groupId>org.hibernate.orm</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>${mssql.version}</version>
      </dependency>
      <dependency>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-core</artifactId>
        <version>${liquibase.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Open JavaFX -->
      <!-- =========== -->
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${openjfx.version}</version>
        <classifier>win</classifier>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${openjfx.version}</version>
        <classifier>linux</classifier>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${openjfx.version}</version>
        <classifier>mac</classifier>
      </dependency>
      <dependency>
        <groupId>org.controlsfx</groupId>
        <artifactId>controlsfx</artifactId>
        <version>${controlsfx.version}</version>
      </dependency>

      <!-- ============== -->
      <!-- JAXB & XML     -->
      <!-- ============== -->
      <!-- https://search.maven.org/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
      <dependency>
        <groupId>jakarta.xml.bind</groupId>
        <artifactId>jakarta.xml.bind-api</artifactId>
        <version>4.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>4.0.5</version>
      </dependency>

      <!-- ============ -->
      <!-- Google Guice -->
      <!-- ============ -->
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Other Tools -->
      <!-- =========== -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${poi.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fazecast</groupId>
        <artifactId>jSerialComm</artifactId>
        <version>${jSerialComm.version}</version>
      </dependency>

      <!-- ========== -->
      <!-- Test tools -->
      <!-- ========== -->
      <!-- https://search.maven.org/artifact/org.hamcrest/hamcrest -->
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- ============ -->
    <!-- Google Guice -->
    <!-- ============ -->
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!-- ========== -->
    <!-- Test tools -->
    <!-- ========== -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*Tests</include>
          </includes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <skip>true</skip>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>COMPLEXITY</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.60</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Deploy configuration-->
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>